# hyperlocal

./: .#.travis.yml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: main.yml
examples/: client.rs  server.rs
hyperlocal/: all.html  index.html  sidebar-items.js  struct.SocketIncoming.html  struct.UnixConnector.html  struct.UnixStream.html  struct.Uri.html  trait.UnixClientExt.html  trait.UnixListenerExt.html  trait.UnixServerExt.html
hyperlocal/client/: struct.UnixConnector.html  struct.UnixStream.html  trait.UnixClientExt.html
hyperlocal/server/: trait.UnixListenerExt.html  trait.UnixServerExt.html
hyperlocal/server/conn/: struct.SocketIncoming.html
hyperlocal/uri/: struct.Uri.html
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/hyper/server/accept/: trait.Accept.js
implementors/hyperlocal/: trait.UnixClientExt.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/tower_service/: trait.Service.js
search.desc/hyperlocal/: hyperlocal-desc-0-.js
src/: client.rs  lib.rs  main.rs  server.rs  uri.rs
src/client/: mod.rs
src/hyperlocal/: client.rs.html  lib.rs.html  server.rs.html  uri.rs.html
src/server/: mod.rs
tests/: server_client.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/hyper/rt/io/: trait.Read.js  trait.Write.js
trait.impl/hyper_util/client/legacy/connect/: trait.Connection.js
trait.impl/hyperlocal/client/: trait.UnixClientExt.js
trait.impl/tokio/io/async_read/: trait.AsyncRead.js
trait.impl/tokio/io/async_write/: trait.AsyncWrite.js
trait.impl/tower_service/: trait.Service.js
