[package]
name = "hyperlocal"
version = "0.8.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Hyper bindings for Unix domain sockets"
homepage = "https://github.com/softprops/hyperlocal"
repository = "https://github.com/softprops/hyperlocal"
keywords = ["hyper", "unix", "sockets", "http"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
hex = "0.4"
hyper = "0.14"
tokio = { version = "1.0", features = ["net"] }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }

[features]
default = []
client = [
    "hyper/client",
    "hyper/http1",
]
server = [
    "hyper/http1",
    "hyper/server"
]

[[example]]
name = "client"
required-features = ["client", "hyper/runtime"]

[[example]]
name = "server"
required-features = ["server", "hyper/runtime"]

[[test]]
name = "server_client"
required-features = ["client", "server", "hyper/runtime"]

[package.metadata.docs.rs]
all-features = true
